feat: add docker-compose.yaml

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -6,7 +6,7 @@
   "sslType": "0",
   "SSLPrivateKeyPath": "config/ssl/private.key",
   "SSLPublicKeyPath": "config/ssl/public.crt",
-  "dbDSN": "./pmail.db",
+  "dbDSN": "./db/pmail.db",
   "dbType": "sqlite",
   "weChatPushAppId": "",
   "weChatPushSecret": "",
